tests/errors/err_duplicate_line.bas
10 PRINT "FIRST"
20 PRINT "SECOND"
20 PRINT "THIRD"
